Refactor README
Streamlined the main README file, moved extended development content into the wiki